# ParallelAlgorithms

./: CMakeLists.txt  heat_mpi.cpp  heat_omp_dynamic.cpp  heat_omp_static.cpp  int_mpi.cpp  int_omp_dynamic.cpp  int_omp_static.cpp  main.cpp  main_int.cpp
